# pacbot-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
computed_data/: action_distributions.npy  graph_lap_eigvecs.npy  node_coords.json  node_embeddings.npy
pacbot_rs/: Cargo.toml  build.rs  build_and_install.sh  pacbot_rs.pyi  pyproject.toml
pacbot_rs/src/: alphazero.rs  candle_inference.rs  candle_qnet.rs  env.rs  ghost_agent.rs  ghost_paths.rs  grid.rs  grid_data.txt  heuristic_values.rs  lib.rs  mcts.rs  observations.rs  pacbot.rs  variables.rs
pacbot_rs/src/game_state/: env.rs  mod.rs  py_wrappers.rs
src/: debug_probe_envs.py  models.py  policies.py  ppo_experience_buffer.py  replay_buffer.py  timing.py  to_safetensors.py  utils.py
src/algorithms/: train_alphazero.py  train_dqn.py  train_ppo.py
