[tool.poetry]
name = "pacbot-rl"
version = "0.1.0"
description = "Reinforcement learning for the Harvard PacBot competition."
authors = ["Quinn Tucker <qxzcraft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
torch = { version = "^2.1.0", source = "torch-cuda" }
maturin = {extras = ["patchelf"], version = "^1.3.0"}
matplotlib = "^3.8.0"
wandb = "^0.15.12"
black = "^23.9.1"
tqdm = "^4.66.1"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
safetensors = "^0.4.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"


[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.black]
line-length = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
