[package]
name = "pacbot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pacbot_rs"
crate-type = ["cdylib"]

[dependencies]
array-init = "2.1.0"
arrayvec = "0.7.4"
itertools = "0.12.0"
ndarray = "0.15.6"
num_enum = "0.7.1"
numpy = "0.20.0"
ordered-float = "4.1.1"
phf = "0.11.2"
pyo3 = "0.20.3"
rand = "0.8.5"
rand_distr = "0.4.3"
static_assertions = "1.1.0"

pacbot-rs-2 = { git = "https://github.com/RIT-MDRC/pacbot-rs.git", rev = "3df8bffb362f3434a6a7df68c3b692cceb68d32b", package = "pacbot-rs" }

[build-dependencies]
npyz = "0.8.1"
phf_codegen = "0.11.2"
pacbot-rs-2 = { git = "https://github.com/RIT-MDRC/pacbot-rs.git", rev = "3df8bffb362f3434a6a7df68c3b692cceb68d32b", package = "pacbot-rs" }
